--- a/information-integration-web/web/package.json
+++ b/information-integration-web/web/package.json
@@ -4,8 +4,27 @@
   "description": "The Client Frontend for the information integration lecture project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch"
   },
   "author": "",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "@webpack-cli/generators": "^2.4.2",
+    "mini-css-extract-plugin": "^2.5.3",
+    "ts-loader": "^9.2.6",
+    "tsc": "^2.0.4",
+    "typescript": "^4.5.5",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.3",
+    "d3": "^7.3.0",
+    "d3-array": "^3.1.1",
+    "handlebars": "^4.7.7"
+  }
 }
