--- a/information-integration-web/web/package.json
+++ b/information-integration-web/web/package.json
@@ -14,6 +14,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@webpack-cli/generators": "^2.4.2",
+    "handlebars-loader": "^1.7.1",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "ts-loader": "^9.2.6",
     "tsc": "^2.0.4",
