--- a/information-integration-web/web/package.json
+++ b/information-integration-web/web/package.json
@@ -14,9 +14,11 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@webpack-cli/generators": "^2.4.2",
+    "css-loader": "^6.5.1",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "tsc": "^2.0.4",
     "typescript": "^4.5.5",
