--- a/information-integration-web/web/package.json
+++ b/information-integration-web/web/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "d3": "^7.3.0",
     "d3-array": "^3.1.1",
     "handlebars": "^4.7.7"
