--- a/information-integration-web/web/package.json
+++ b/information-integration-web/web/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/bootstrap": "^5.1.9",
     "@webpack-cli/generators": "^2.4.2",
     "css-loader": "^6.5.1",
     "handlebars-loader": "^1.7.1",
