--- a/information-integration-web/web/package.json
+++ b/information-integration-web/web/package.json
@@ -31,6 +31,7 @@
     "bootstrap-icons": "^1.7.2",
     "d3": "^7.3.0",
     "d3-array": "^3.1.1",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "jquery": "^3.6.0"
   }
 }
