--- a/information-integration-web/web/package.json
+++ b/information-integration-web/web/package.json
@@ -14,6 +14,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/bootstrap": "^5.1.9",
+    "@types/d3": "^7.1.0",
+    "@types/d3-array": "^3.0.2",
     "@webpack-cli/generators": "^2.4.2",
     "css-loader": "^6.5.1",
     "handlebars-loader": "^1.7.1",
