--- a/information-integration-web/web/package.json
+++ b/information-integration-web/web/package.json
@@ -14,8 +14,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/bootstrap": "^5.1.9",
-    "@types/d3": "^7.1.0",
-    "@types/d3-array": "^3.0.2",
+    "@types/echarts": "^4.9.13",
     "@webpack-cli/generators": "^2.4.2",
     "css-loader": "^6.5.1",
     "handlebars-loader": "^1.7.1",
@@ -31,8 +30,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
-    "d3": "^7.3.0",
-    "d3-array": "^3.1.1",
+    "echarts": "^5.3.0",
     "handlebars": "^4.7.7",
     "jquery": "^3.6.0"
   }
